--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -4,7 +4,7 @@
 :root {
   --active-color: #ba68c8;
   // light
-  --border-color: #e0e0e0;
+  --border-color: #eee;
   --bg-color: #f6f6f6;
   // dark
   --border-color-dark: #444;
@@ -33,7 +33,7 @@ $breakpoint-xl-up: "(min-width: 1201px)";
   background-color: #fff;
   box-shadow: 0 1px 14px 5px rgba(#000, 0.05);
   margin-bottom: 1.5rem;
-  padding: 1.5rem;
+  padding: 1.7rem 1.5rem 1.25rem;
   @if $themeMode == "dark" {
     background-color: #252525;
     box-shadow: inset 0 0 0 1px rgba(#fff, 0.07), 0 1px 14px 5px rgba(#000, 0.15);
